--- a/README
+++ b/README
@@ -5,5 +5,6 @@
 
 /rest/identity      GET  -> REST Server identity
 /rest/led           GET  -> REST LED Status
-/rest/led           POST -> REST LEDCommand
-
+/rest/led           POST -> REST LED Command
+/rest/config        GET  -> REST Controller config GUI 
+/rest/pwm           POST -> REST set PWM Settings
