--- a/README
+++ b/README
@@ -8,3 +8,5 @@
 /rest/led           POST -> REST LED Command
 /rest/config        GET  -> REST Controller config GUI 
 /rest/pwm           POST -> REST set PWM Settings
+/rest/fw_access     POST -> REST set Firmware access informations
+/rest/api_access    POST -> REST set api access informations
